# mandelbrot_avx512

./: .gitignore  CMakeLists.txt  README.md
cmake/: conan.cmake  general.cmake
include/: avx_mathfun.hpp  avx_pcg.hpp  task_system.hpp
src/: main.cpp
